<resources>
    <string name="app_name">Service Station (Customer)</string>
    <string name="Title">Add your services</string>


    <string name="vehicleNo_txt">Enter your vehicle number...</string>
    <string name="ServiceLable">" Service"</string>
    <string name="enterName">EnterName</string>
    <string name="VehicleText">Vehicle Type</string>


    <string-array name="planets_array">
        <item>Vehicle Wash</item>
        <item>Interior and Exterior Detailing</item>
        <item>Full Service</item>
        <item>Hybrid services</item>
        <item>Wheel Alignment</item>


    </string-array>

    <string-array name="EmplyeesNO">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>


    </string-array>
    <string name="Tp">Telephone No</string>
    <string name="addServiceButton">OK</string>
    <string name="ServiceNameLable">Service Name</string>
    <string name="ServiceTypeLable">Service Type</string>
    <string name="OKBUTTON">OK</string>
    <string name="EmlpoyeeNOTextView">Amount Of Employees</string>
    <string name="PriceText">Needed Price</string>
    <string name="name_label">Customer Name</string>
    <string name="vehicleNo_label">Vehicle Number</string>

    <string name="name_label">Customer Name</string>
    <string name="name_txt">Enter your name....</string>
    <string name="vehicleNo_label">Vehicle Number</string>
    <string name="vehicleNo_txt">Enter your vehicle number...</string>
    <string name="telepohone_label">Mobile Number</string>
    <string name="telephone_txt">Enter mobile number....</string>
    <string name="add_service_title">Add your service</string>
    <string name="service1_label">Service 01</string>
    <string name="service2_label">Service 02</string>
    <string name="service3_label">Service 03</string>
    <string name="service3_txt">Select your service 01</string>
    <string name="total_label">Your Total Bill</string>
    <string name="totalcalc_label">Total</string>
    <string name="totalcalc">Rs.0.00</string>

    <string name="select_service">Select your service</string>
    <string-array name="service_array">
        <item>Car wash</item>
        <item>Wax</item>
        <item>Cut n' polish</item>
        <item>Oil change</item>
    </string-array>

    <string name="progress_services">Check_Progress</string>
    <string-array name="progress_update">
        <item>Not Started</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>

    <string name="payment">Payment_status</string>
    <string-array name="payment_status">
        <item>Not paid</item>
        <item>Paid</item>
    </string-array>


    <string name="confirm_btn">CONFIRM</string>
    <string name="aftr_service_cust_title">Check the Service Progress</string>
    <string name="update_progress">Update the progress</string>
    <string name="update_progress_btn">UPDATE</string>
    <string name="done">DONE</string>
    <string name="payment_label">Payment</string>
    <string name="Rate_service">Rate the service</string>


</resources>
