<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressServices">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bgapp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/update_progress"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/vehicleNo_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Spinner
        android:id="@+id/spinner_service1"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/service_array"
        android:prompt="@string/select_service"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_service3"></Spinner>

    <Spinner
        android:id="@+id/spinner_service2"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/service_array"
        android:prompt="@string/select_service"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_service1"></Spinner>

    <Spinner
        android:id="@+id/spinner_service3"
        android:layout_width="171dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/service_array"
        android:prompt="@string/select_service"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"></Spinner>

    <Spinner
        android:id="@+id/spinner_progress1"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/progress_update"
        android:prompt="@string/progress_services"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinner_service2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_service2"></Spinner>

    <Spinner
        android:id="@+id/spinner_progress2"
        android:layout_width="170dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/progress_update"
        android:prompt="@string/progress_services"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinner_service1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_service1"></Spinner>

    <Spinner
        android:id="@+id/spinner_progress3"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/progress_update"
        android:prompt="@string/progress_services"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinner_service3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_service3"></Spinner>

    <Spinner
        android:id="@+id/payment_status"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/payment_status"
        android:prompt="@string/payment"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        tools:layout_editor_absoluteX="129dp"></Spinner>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:text="@string/update_progress_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="606dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vehicleNo_txt"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/progress_services"
        android:textColor="#673AB7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_editor_absoluteX="296dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/payment_label"
        android:textColor="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/payment_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_service2"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>